deploy/k8s/ingress_yuao.yaml
# yudao Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yudao
  labels:
    app: yudao
    version: v1.0.0
    component: ingress
    part-of: yudao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: api.yudao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yudao-gateway
                port:
                  number: 48080
    - host: www.yudao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yudao-ui-admin
                port:
                  number: 80
